
14. SOLR-999: XPathRecordReader fails on XMLs with nodes mixed with CDATA content.
              (Fergus McMenemie, Noble Paul via shalin)

15.SOLR-1000: FileListEntityProcessor should not apply fileName filter to directory names.
              (Fergus McMenemie via shalin)

16.SOLR-1009: Repeated column names result in duplicate values.
              (Fergus McMenemie, Noble Paul via shalin)

Documentation
----------------------

Other
----------------------
1. SOLR-782: Refactored SolrWriter to make it a concrete class and removed wrappers over SolrInputDocument.
             Refactored to load Evaluators lazily. Removed multiple document nodes in the configuration xml.
             Removed support for 'default' variables, they are automatically available as request parameters.
             (Noble Paul via shalin)

2. SOLR-964: XPathEntityProcessor now ignores DTD validations
             (Fergus McMenemie, Noble Paul via shalin)

================== Release 1.3.0 20080915 ==================

Status
------
This is the first release since DataImportHandler was added to the contrib solr distribution.
The following changes list changes since the code was introduced, not since
the first official release.


Detailed Change List
--------------------

New Features
1. SOLR-700:  Allow configurable locales through a locale attribute in fields for NumberFormatTransformer.
              (Stefan Oestreicher, shalin)

Changes in runtime behavior

Bug Fixes
1. SOLR-704:  NumberFormatTransformer can silently ignore part of the string while parsing. Now it tries to
              use the complete string for parsing. Failure to do so will result in an exception.
              (Stefan Oestreicher via shalin)

2. SOLR-729:  Context.getDataSource(String) gives current entity's DataSource instance regardless of argument.
              (Noble Paul, shalin)

3. SOLR-726:  Jdbc Drivers and DataSources fail to load if placed in multicore sharedLib or core's lib directory.